--- a/index.html
+++ b/index.html
@@ -42,7 +42,6 @@
                     </p>
                     <p>Postdoctoral Researcher<br>
                         <a href="https://www.lti.cs.cmu.edu/" target="_blank">Language Technologies Institute</a><br>
-                        <a href="https://www.cs.cmu.edu/" target="_blank">School of Computer Science</a><br>
                         <a href="https://www.cmu.edu/" target="_blank">Carnegie Mellon University</a>
                     </p>
                     <p>Email: xyue2@andrew.cmu.edu</p>
@@ -85,6 +84,22 @@
                     <li> <b>Designing responsible and reliable AI models </b>  (e.g., <a href="https://arxiv.org/abs/2210.14348">Differential Privacy</a>, <a href="https://arxiv.org/abs/2402.15159">Unlearning</a>, <a href="https://arxiv.org/abs/2305.06311">Attribution</a>, etc.) <b>and their applications in healthcare </b>(e.g., <a href="https://aimedlab.github.io/PULSE/">ECG Multimodal LLM (PULSE)</a>)
                 </ul>
             </div>
+
+            <div class="ui text container">
+                <p style="color: #CD5C5C; font-weight: bold; padding: 15px; border-left: 4px solid #CD5C5C; background-color: #f8f9fa;">
+                    🎓 I am actively looking for (remote) interns to work on exciting research projects, including:
+                    <span style="display: block; margin-top: 8px; margin-left: 20px; margin-bottom: 8px;">
+                        • Reinforcement Learning for (M)LLM Reasoning and Agents<br>
+                        • Understanding Memorization and Forgetting in LLMs<br>
+                        • (M)LLM Evaluation and Benchmarking<br>
+                        • Medical MLLMs and Medical AI Agents<br>
+                        • Other topics you are passionate about!
+                    </span>
+                    Please feel free to reach out if interested! 
+                </p>
+            </div>
+
+            <br>
 
             <div class="ui text container">
                 <h2 class="ui header" id="news">What's New</h2>
