--- a/index.html
+++ b/index.html
@@ -87,9 +87,9 @@
 
             <div class="ui text container">
                 <p style="color: #CD5C5C; font-weight: bold; padding: 15px; border-left: 4px solid #CD5C5C; background-color: #f8f9fa;">
-                    🎓 I am actively looking for (remote) interns to work on exciting research projects, including:
+                    🎓 I am looking for (remote) interns/collaborators to work on exciting projects, including:
                     <span style="display: block; margin-top: 8px; margin-left: 20px; margin-bottom: 8px;">
-                        • (M)LLM / AI Agent Reasoning <br>
+                        • LLM / AI Agent: RL, Reasoning, Memory, Experience Learning<br>
                         • Understanding Memorization and Forgetting in LLMs<br>
                         • (M)LLM Evaluation and Benchmarking<br>
                         • Medical MLLMs and Medical AI Agents<br>
