--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
                     🎓 I am looking for (remote) interns/collaborators to work on exciting projects, including:
                     <span style="display: block; margin-top: 8px; margin-left: 20px; margin-bottom: 8px;">
                         • LLM / AI Agent: RL, Reasoning, Memory, Experience Learning<br>
-                        • Understanding Memorization and Forgetting in LLMs<br>
-                        • (M)LLM Evaluation and Benchmarking<br>
-                        • Medical MLLMs and Medical AI Agents<br>
+                        • LLM ML Foundations: Memorization/Forgetting, Generalization <br>
+                        • Evaluation and Benchmarking<br>
+                        • Applications: Medical MLLMs and Medical AI Agents<br>
                         • Other topics you are passionate about!
                     </span>
                     Please feel free to reach out if interested! 
