--- a/publication.html
+++ b/publication.html
@@ -37,8 +37,24 @@
                     <p>*: Equal Contributions; ✝: My Advisee</p>
                     <ul>
                         <li>
+                            <a href="https://arxiv.org/abs/2507.00432" target="_blank">
+                                Does Math Reasoning Improve General LLM Capabilities? Understanding Transferability of LLM Reasoning
+                            </a><br>
+                            Maggie Huan*✝, Yuetai Li*✝, Tuney Zheng*✝, Xiaoyu Xu, Seungone Kim, Minxin Du, Radha Poovendran, Graham Neubig, <b><u>Xiang Yue</u></b><br>
+                            <i>arXiv 2025</i><br>
+                        <!-- GitHub badge -->
+                        <a href="https://github.com/ReasoningTransfer/Transferability-of-LLM-Reasoning" target="_blank">
+                            <img src="https://img.shields.io/github/stars/ReasoningTransfer/Transferability-of-LLM-Reasoning?style=social" alt="GitHub stars">
+                        </a>
+                        <!-- Hugging Face badge -->
+                         <a href="https://huggingface.co/ReasoningTransferability" target="_blank"><img src="https://img.shields.io/badge/🤗%20HF%20Checkpoints-FFFFFF" alt="Checkpoints on HF"></a>
+                        
+                        </a>
+                    </p>
+                </li>
+                        <li>
                             <p style="background-color: #FFFFE0; padding: 10px; border-radius: 5px;">
-                                <a href="https://arxiv.org/abs/2502.03373" target="_blank">🔥 Demystifying Long Chain-of-Thought Reasoning in LLMs</a><br>
+                                <a href="https://arxiv.org/abs/2502.03373" target="_blank"> Demystifying Long Chain-of-Thought Reasoning in LLMs</a><br>
                                 Edward Yeo*✝, Yuxuan Tong*✝, Morry Niu, Graham Neubig, <b><u>Xiang Yue</u></b><br>
                                 <i>ICML 2025</i><br>
 				    (Also 🏆Best Paper Award at <a href="https://fm-wild-community.github.io/">ICLR 2025 Workshop on
