--- a/talk.html
+++ b/talk.html
@@ -39,14 +39,7 @@
                 <div class="content">
                     <a class="description" href="#">Advancing LLM Reasoning: A Road to Open Models, Open Science</a>
                     <div class="meta">
-                        <span>Oct 2024, Invited talk at University of Virginia</span>
-                    </div>
-                </div>
-                
-                <div class="content">
-                    <a class="description" href="#">Advancing LLM Reasoning: A Road to Open Models, Open Science</a>
-                    <div class="meta">
-                        <span>Oct 2024, Invited talk at George Mason University</span>
+                        <span>Oct 2024, Invited talk at University of Virginia and George Mason University</span>
                     </div>
                 </div>
                 
