--- a/index.html
+++ b/index.html
@@ -77,15 +77,15 @@
             <div class="ui text container">
                 My research aims to understand and enhance the reasoning capabilities of LLMs across different modalities and contexts while improving their responsibility and reliability.
                 <ul>
-                    <li> <b>Understanding LLMs' reasoning through rigorous evaluation and benchmarking</b> (e.g., <a href="https://arxiv.org/abs/2311.16502">MMMU</a>/<a href="https://arxiv.org/abs/2409.02813">MMMU-Pro</a>/<a href="https://arxiv.org/abs/2406.01574/">MMLU-Pro</a>, <a href="https://arxiv.org/pdf/2502.03373">Demystifying Long CoT</a>, <a href="https://arxiv.org/abs/2405.15071">GrokkedTransformer</a>)</li>
+                    <li> <b>Understanding LLMs' reasoning through rigorous evaluation and benchmarking</b> (e.g., <a href="https://arxiv.org/abs/2311.16502">MMMU</a>/<a href="https://arxiv.org/abs/2409.02813">MMMU-Pro</a>/<a href="https://arxiv.org/abs/2406.01574/">MMLU-Pro</a>, <a href="https://arxiv.org/pdf/2502.03373">Demystifying Long CoT</a>, <a href="https://arxiv.org/abs/2405.15071">GrokkedTransformer</a>, <a href="https://arxiv.org/abs/2507.00432">Transferability of LLM Reasoning</a>)</li>
                     
                     <li> <b>Improving LLMs' reasoning capabilities with synthetic data generation</b> (e.g., <a href="https://tiger-ai-lab.github.io/MAmmoTH/">MAmmoTH</a>/<a href="https://tiger-ai-lab.github.io/MAmmoTH2/">MAmmoTH2</a>/<a href="https://mammoth-vl.github.io/">MAmmoTH-VL</a>, <a href="https://neulab.github.io/Pangea/">Pangea</a>, <a href="https://opencodeinterpreter.github.io/">OpenCodeInterpreter</a>)</li>
 
-                    <li> <b>Designing responsible and reliable AI models </b>  (e.g., <a href="https://arxiv.org/abs/2210.14348">Differential Privacy</a>, <a href="https://arxiv.org/abs/2402.15159">Unlearning</a>, <a href="https://arxiv.org/abs/2305.06311">Attribution</a>, etc.) <b>and their applications in healthcare </b>(e.g., <a href="https://aimedlab.github.io/PULSE/">ECG Multimodal LLM (PULSE)</a>)
+                    <li> <b>Designing responsible and reliable AI models </b>  (e.g., <a href="https://arxiv.org/abs/2210.14348">Differential Privacy</a>, <a href="https://arxiv.org/abs/2402.15159">Unlearning</a>, <a href="https://arxiv.org/abs/2305.06311">Attribution</a>, etc.) <b>and their applications in healthcare </b>(e.g., <a href="https://aimedlab.github.io/PULSE/">ECG Multimodal LLM</a>)
                 </ul>
             </div>
 
-            <div class="ui text container">
+            <!-- <div class="ui text container">
                 <p style="color: #CD5C5C; font-weight: bold; padding: 15px; border-left: 4px solid #CD5C5C; background-color: #f8f9fa;">
                     🎓 I am looking for (remote) interns/collaborators to work on exciting projects, including:
                     <span style="display: block; margin-top: 8px; margin-left: 20px; margin-bottom: 8px;">
@@ -97,7 +97,7 @@
                     </span>
                     Please feel free to reach out if interested! 
                 </p>
-            </div>
+            </div> -->
 
             <br>
 
