Add recent talks section with links to slides and new PDF files

--- a/index.html
+++ b/index.html
@@ -155,6 +155,23 @@
                 </ul>
             </div>
 
+            <div class="ui text container">
+                <h2 class="ui header" id="news">Recent Talks</h2>
+                <ul>
+                   
+                    <li>Rethinking LLM Reasoning<a href="pdf/Rethinking_LLM_Reasoning.pdf" target="_blank"> [Slides]</a>
+                    </li>
+
+                     <li>Learning to Reason with LLMs<a href="pdf/Learning_to_Reason_with_LLMs.pdf" target="_blank"> [Slides]</a>
+                    </li>
+                    
+                    <li><a href="https://synth-data-acl.github.io/" target="_blank">Tutorial: Synthetic Data in the Era of LLMs</a>
+                    <a href="https://synth-data-acl.github.io/static/slides/slides.pdf" target="_blank">[Slides]</a>
+                    </li>
+
+                </ul>
+            </div>
+
             <!-- <div class="ui text container">
                 <p style="color: #CD5C5C; font-weight: bold; padding: 15px; border-left: 4px solid #CD5C5C; background-color: #f8f9fa;">
                     🎓 I am looking for (remote) interns/collaborators to work on exciting projects, including:
