--- a/index.html
+++ b/index.html
@@ -114,11 +114,9 @@
                     <p>
                         (Pronounced as <i>"Shiang Yoo-eh"</i>, 岳翔)
                     </p>
-                    <p>Postdoctoral Researcher<br>
-                        <a href="https://www.lti.cs.cmu.edu/" target="_blank">Language Technologies Institute</a><br>
-                        <a href="https://www.cmu.edu/" target="_blank">Carnegie Mellon University</a>
+                    <p>AI Researcher @ Meta<br>
                     </p>
-                    <p>Email: xyue2@andrew.cmu.edu</p>
+                    <p>Email: xiangyue.work@gmail.com</p>
                     <p>
                         <a href="https://scholar.google.com/citations?hl=en&user=4jX_dI8AAAAJ" target="_blank"><i class="google icon"></i>Google Scholar</a>
                         <a href="https://github.com/xiangyue9607" target="_blank"><i class="github icon"></i>Github</a>
