--- a/teaching.html
+++ b/teaching.html
@@ -1,67 +1,69 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta content="width=device-width,height=device-height,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.5, user-scalable=yes"
-              name="viewport">
-        <meta charset="utf-8">
-        <title>Xiang Yue's Homepage</title>
-        <link rel="stylesheet" type="text/css" href="./stylesheets/styles.css">
-        <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.1/semantic.css">
-        <link rel="apple-touch-icon" sizes="180x180" href="images/icon/apple-touch-icon.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="images/icon/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="images/icon/favicon-16x16.png">
-        <link rel="manifest" href="images/icon/site.webmanifest">
-        <script src="./stylesheets/jquery.js"></script>
-        <script src="./stylesheets/semantic.js"></script>
-    </head>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Xiang Yue - Teaching and Mentoring">
+    <title>Xiang Yue - Teaching</title>
+
+    <!-- Favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="images/icon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/icon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="images/icon/favicon-16x16.png">
+    <link rel="manifest" href="images/icon/site.webmanifest">
+
+    <!-- Stylesheet -->
+    <link rel="stylesheet" href="stylesheets/styles.css">
+
+    <style>
+    /* Teaching-specific overrides if needed */
+    h1 {
+        margin-bottom: 25px;
+    }
+
+    a:hover {
+        text-decoration: underline;
+    }
+    </style>
+</head>
 <body>
 
-<!-- description -->
-<div class="ui fixed inverted menu">
-    <div class="ui container">
-        <a href="index.html" class="description item">Home</a>
-        <a href="publication.html" class="item">Publications</a>
-        <a href="talk.html" class="item">Talks</a>
-        <a href="teaching.html" class="item">Teaching</a>
+<nav>
+    <div class="nav-container">
+        <a href="index.html">Home</a>
+        <a href="publication.html">Papers</a>
     </div>
+</nav>
+
+<div class="container">
+    <h1>Teaching and Mentoring</h1>
+
+    <h2>Teaching Experience</h2>
+    <ul>
+        <li><strong>Co-Instructor, Fall 2024:</strong> <a href="https://phontron.com/class/anlp-fall2024/staff/" target="_blank">Advanced Natural Language Processing</a>, CMU</li>
+        <li><strong>Guest Lecturer, Spring 2022:</strong> "Privacy Risks of LLMs", CSE 5539: On the Opportunities and Risks of Pre-trained Language Models, OSU</li>
+        <li><strong>Guest Lecturer, Fall 2022:</strong> "Graph Representation Learning", CSE 5243: Introduction to Data Mining, OSU</li>
+        <li><strong>Guest Lecturer, Fall 2021:</strong> "Introduction to Data Mining", CSE 5243: Introduction to Data Mining, OSU</li>
+    </ul>
+
+    <h2>Students Supervised / Mentored</h2>
+    <ul>
+        <li><strong>Kaylin Yueqi Song</strong> (CMU Undergrad/Master): Multilingual Multimodal LLMs (ICLR'25)</li>
+        <li><strong>Edward Yeo</strong> (CMU Undergrad; IN.AI Engineer): Demystifying Long CoT (ICML'25)</li>
+        <li><strong>Yuxuan Tong</strong> (CMU Intern): Demystifying Long CoT (ICML'25)</li>
+        <li><strong>Jarvis Guo</strong> (Master): MAmmoTH-VL (ACL'25)</li>
+        <li><strong>Jin Yao</strong> (UVA Junior PhD): Unlearning LLMs (ACL'24)</li>
+        <li><strong>Junpeng Liu</strong> (CUHK Junior PhD): VisualWebBench (COLM'24), MultiUI (ICLR'25)</li>
+        <li><strong>Tuney Zheng</strong> (UWaterloo Intern): OpenCodeInterpreter (ACL'24 Findings), MAmmoTH2 (NeurIPS'24), MMMU (CVPR'24)</li>
+        <li><strong>Yuansheng Ni</strong> (UWaterloo Intern → UWaterloo Master): MMMU (CVPR'24)</li>
+        <li><strong>Tianshu Zhang</strong> (OSU Junior PhD): TableLlama (NAACL'24)</li>
+        <li><strong>Yifei Li</strong> (OSU Junior PhD): AttributionBench (ACL'24 Findings)</li>
+        <li><strong>Frederick Zhang</strong> (OSU Undergrad → UMich PhD): CliniQG4QA (BIBM'21 Best Paper), COUGH (EMNLP'21)</li>
+        <li><strong>Shuang Zhou</strong> (PolyU Master → PolyU PhD): PHICON (EMNLP'20 ClinicalNLP Workshop)</li>
+        <li><strong>Jingong Huang</strong> (OSU Master → UC Riverside PhD): Biomedical Graph Embedding (Bioinformatics)</li>
+        <li><strong>Kaushik Mani</strong> (OSU Master): Clinical Phrase Mining (BIBM'20)</li>
+    </ul>
 </div>
-<div class="ui main text container">
-    <div class="ui huge header">Teaching and Mentoring</div>
-    <div class="ui section divider"></div>
-    <div class="ui top attached">
-    
-    <!-- Teaching Experience -->
-    <div class="ui top attached">
-        <h3 class="ui header">Teaching Experience</h3>
-        <ul>
-            <li><strong>Co-Instructor, Fall 2024:</strong> <a href="https://phontron.com/class/anlp-fall2024/staff/" target="_blank"> Advanced Natural Language Processing</a>, CMU</li>
-            <li><strong>Guest Lecturer, Spring 2022:</strong> "Privacy Risks of LLMs", CSE 5539: On the Opportunities and Risks of Pre-trained Language Models, OSU</li>
-            <li><strong>Guest Lecturer, Fall 2022:</strong> "Graph Representation Learning", CSE 5243: Introduction to Data Mining, OSU</li>
-            <li><strong>Guest Lecturer, Fall 2021:</strong> "Introduction to Data Mining", CSE 5243: Introduction to Data Mining, OSU</li>
-        </ul>
-    </div>
-
-    <!-- Students Supervised / Mentored -->
-        <h3 class="ui header">Students Supervised / Mentored</h3>
-        <ul>
-            <li><strong>Kaylin Yueqi Song</strong> (CMU Undergrad/Master): Multilingual Multimodal LLMs (ICLR'25)</li>
-            <li><strong>Edward Yeo</strong> (CMU Undergrad; IN.AI Engineer):  Demystifying Long CoT (ICML'25) </li>
-            <li><strong>Yuxuan Tong</strong> (CMU Intern): Demystifying Long CoT (ICML'25)  </li>
-            <li><strong>Jarvis Guo</strong> (Master): MAmmoTH-VL (ACL'25)</li>
-            <li><strong>Jin Yao</strong> (UVA Junior PhD): Unlearning LLMs (ACL'24)</li>
-            <li><strong>Junpeng Liu</strong>  (CUHK Junior PhD): VisualWebBench (COLM'24), MultiUI (ICLR'25)</li>
-            <li><strong>Tuney Zheng</strong>  (UWaterloo Intern): OpenCodeInterpreter (ACL'24 Findings), MAmmoTH2 (NeurIPS'24), MMMU (CVPR'24)</li>
-            <li><strong>Yuansheng Ni</strong>  (UWaterloo Intern → UWaterloo Master): MMMU (CVPR'24)</li>
-            <li><strong>Tianshu Zhang</strong>  (OSU Junior PhD): TableLlama (NAACL'24)</li>
-            <li><strong>Yifei Li</strong>  (OSU Junior PhD): AttributionBench (ACL'24 Findings)</li>
-            <li><strong>Frederick Zhang</strong>  (OSU Undergrad → UMich PhD): CliniQG4QA (BIBM'21 Best Paper), COUGH (EMNLP'21)</li>
-            <li><strong>Shuang Zhou</strong>  (PolyU Master → PolyU PhD): PHICON (EMNLP'20 ClinicalNLP Workshop)</li>
-            <li><strong>Jingong Huang</strong>  (OSU Master → UC Riverside PhD): Biomedical Graph Embedding (Bioinformatics)</li>
-            <li><strong>Kaushik Mani</strong>  (OSU Master): Clinical Phrase Mining (BIBM'20)</li>
-        </ul>
-    </div>
-
-    <div class="ui section divider"></div>
 
 </body>
 </html>
