--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             <p>I received my Ph.D. from The Ohio State University's <a href="https://twitter.com/osunlp" target="_blank">OSU NLP Group</a>, where I was advised by <a href="http://web.cse.ohio-state.edu/~sun.397/" target="_blank">Prof. Huan Sun</a> and <a href="https://ysu1989.github.io/" target="_blank">Prof. Yu Su</a>. I completed my B.S. in Computer Science at Wuhan University.</p>
         </div>
 
-        <h2>Papers</h2>
+        <h2>Recent Papers</h2>
         <ul class="talks-list">
             <li><a href="https://arxiv.org/abs/2311.16502" target="_blank">MMMU: A Massive Multi-discipline Multimodal Understanding and Reasoning Benchmark for Expert AGI</a></li>
 
@@ -133,15 +133,19 @@
 
         </ul>
 
-        <h2>Recent Talks</h2>
+        <h2>Recent Talks and Media</h2>
         <ul class="talks-list">
-            <li><a href="https://benchmarking.science/" target="_blank">The Science of Benchmarking</a> <a href="https://benchmarking.science/slides.pdf" target="_blank">[Slides]</a></li>
+            
+
+            <li><a href="https://benchmarking.science/" target="_blank">[NeurIPS 2025 Tutorial] The Science of Benchmarking</a> <a href="https://benchmarking.science/slides.pdf" target="_blank">[Slides]</a></li>
 
             <li>Rethinking LLM Reasoning <a href="pdf/Rethinking_LLM_Reasoning.pdf" target="_blank">[Slides]</a></li>
 
             <li>Learning to Reason with LLMs <a href="pdf/Learning_to_Reason_with_LLMs.pdf" target="_blank">[Slides]</a></li>
 
-            <li><a href="https://synth-data-acl.github.io/" target="_blank">Synthetic Data in the Era of LLMs</a> <a href="https://synth-data-acl.github.io/static/slides/slides.pdf" target="_blank">[Slides]</a></li>
+            <li><a href="https://synth-data-acl.github.io/" target="_blank">[ACL 2025 Tutorial] Synthetic Data in the Era of LLMs</a> <a href="https://synth-data-acl.github.io/static/slides/slides.pdf" target="_blank">[Slides]</a></li>
+
+            <li><a href="https://www.nature.com/articles/d41586-025-00110-6" target="_blank">[Nature] How should we test AI for human-level intelligence? OpenAI's o3 electrifies quest</a></li>
         </ul>
     </div>
 
