--- a/index.html
+++ b/index.html
@@ -113,21 +113,13 @@
 
         <h2>Recent Papers</h2>
         <ul class="talks-list">
-            <li><a href="https://arxiv.org/abs/2311.16502" target="_blank">MMMU: A Massive Multi-discipline Multimodal Understanding and Reasoning Benchmark for Expert AGI</a></li>
-
-            <li><a href="https://arxiv.org/abs/2409.02813" target="_blank">MMMU-Pro: A More Robust Multi-discipline Multimodal Understanding Benchmark</a></li>
-
-            <li><a href="https://arxiv.org/abs/2406.01574/" target="_blank">MMLU-Pro: A More Robust and Challenging Multi-Task Language Understanding Benchmark</a></li>
+            <li><a href="https://arxiv.org/abs/2311.16502" target="_blank">MMMU</a> / <a href="https://arxiv.org/abs/2409.02813" target="_blank">MMMU-Pro</a> / <a href="https://arxiv.org/abs/2406.01574/" target="_blank">MMLU-Pro</a>: A series of benchmarks for multimodal and language reasoning</li>
 
             <li><a href="https://arxiv.org/pdf/2502.03373" target="_blank">Demystifying Long Chain-of-Thought Reasoning in LLMs</a></li>
 
             <li><a href="https://arxiv.org/abs/2507.00432" target="_blank">Does Math Reasoning Improve General LLM Capabilities? Understanding Transferability of LLM Reasoning</a></li>
 
             <li><a href="https://tiger-ai-lab.github.io/MAmmoTH2/" target="_blank">MAmmoTH2: Scaling Instructions from the Web</a></li>
-
-            <li><a href="https://tiger-ai-lab.github.io/MAmmoTH/" target="_blank">MAmmoTH: Building Math Generalist Models through Hybrid Instruction Tuning</a></li>
-
-            <li><a href="https://neulab.github.io/Pangea/" target="_blank">Pangea: A Fully Open Multilingual Multimodal LLM for 39 Languages</a></li>
 
             <li><a href="https://arxiv.org/abs/2405.15071" target="_blank">Grokked Transformers are Implicit Reasoners: A Mechanistic Journey to the Edge of Generalization</a></li>
 
