--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         </div>
 
         <div class="professional-summary">
-            <p>I am an AI researcher at Meta. I work in the TBD Lab at Meta Superintelligence Labs (MSL). Before joining Meta, I spent two wonderful years at Carnegie Mellon University (CMU) as a postdoctoral researcher, working with <a href="https://www.phontron.com/" target="_blank">Prof. Graham Neubig</a> on natural language processing (NLP) and large language models (LLMs).</p>
+            <p>I am an AI researcher at Meta Superintelligence Labs (MSL). Before joining Meta, I spent two wonderful years at Carnegie Mellon University (CMU) as a postdoctoral researcher, working with <a href="https://www.phontron.com/" target="_blank">Prof. Graham Neubig</a> on natural language processing (NLP) and large language models (LLMs).</p>
 
             <p>I received my Ph.D. from The Ohio State University's <a href="https://twitter.com/osunlp" target="_blank">OSU NLP Group</a>, where I was advised by <a href="http://web.cse.ohio-state.edu/~sun.397/" target="_blank">Prof. Huan Sun</a> and <a href="https://ysu1989.github.io/" target="_blank">Prof. Yu Su</a>. I completed my B.S. in Computer Science at Wuhan University.</p>
         </div>
@@ -114,6 +114,8 @@
         <h2>Recent Papers</h2>
         <ul class="talks-list">
             <li><a href="https://arxiv.org/abs/2311.16502" target="_blank">MMMU</a> / <a href="https://arxiv.org/abs/2409.02813" target="_blank">MMMU-Pro</a> / <a href="https://arxiv.org/abs/2406.01574/" target="_blank">MMLU-Pro</a>: A series of benchmarks for multimodal and language reasoning</li>
+
+            <li><a href="https://arxiv.org/abs/2512.07783" target="_blank">On the Interplay of Pre-Training, Mid-Training, and RL on Reasoning Language Models</a></li>
 
             <li><a href="https://arxiv.org/pdf/2502.03373" target="_blank">Demystifying Long Chain-of-Thought Reasoning in LLMs</a></li>
 
