--- a/publication.html
+++ b/publication.html
@@ -46,6 +46,26 @@
     <ul class="publications-list">
         <li>
             <div class="paper-title">
+                <a href="https://arxiv.org/abs/2512.07783" target="_blank">
+                    On the Interplay of Pre-Training, Mid-Training, and RL on Reasoning Language Models
+                </a>
+            </div>
+            <div class="paper-authors">
+                Charlie Zhang✝, Graham Neubig, <b><u>Xiang Yue</u></b>
+            </div>
+            <div class="paper-venue">arXiv 2025</div>
+            <div class="paper-links">
+                <a href="https://github.com/Interplay-LM-Reasoning/Interplay-LM-Reasoning" target="_blank">
+                    <img src="https://img.shields.io/github/stars/Interplay-LM-Reasoning/Interplay-LM-Reasoning?style=social" alt="GitHub stars">
+                </a>
+                <a href="https://huggingface.co/Interplay-LM-Reasoning" target="_blank">
+                    <img src="https://img.shields.io/badge/🤗%20HF%20Checkpoints-FFFFFF" alt="Checkpoints on HF">
+                </a>
+            </div>
+        </li>
+
+        <li>
+            <div class="paper-title">
                 <a href="https://arxiv.org/abs/2507.00432" target="_blank">
                     Does Math Reasoning Improve General LLM Capabilities? Understanding Transferability of LLM Reasoning
                 </a>
