--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                     <a href="https://scholar.google.com/citations?hl=en&user=4jX_dI8AAAAJ" target="_blank">Google Scholar</a>
                     <a href="https://github.com/xiangyue9607" target="_blank">Github</a>
                     <a href="https://www.linkedin.com/in/xiang-yue-0704/" target="_blank">LinkedIn</a>
-                    <a href="https://twitter.com/xiangyue96" target="_blank">Twitter</a>
+                    <a href="https://x.com/xiangyue96" target="_blank">X/Twitter</a>
                 </div>
             </div>
         </div>
@@ -108,22 +108,22 @@
         <div class="professional-summary">
             <p>I am an AI researcher at Meta Superintelligence Labs (MSL). Before joining Meta, I spent two wonderful years at Carnegie Mellon University (CMU) as a postdoctoral researcher, working with <a href="https://www.phontron.com/" target="_blank">Prof. Graham Neubig</a> on natural language processing (NLP) and large language models (LLMs).</p>
 
-            <p>I received my Ph.D. from The Ohio State University's <a href="https://twitter.com/osunlp" target="_blank">OSU NLP Group</a>, where I was advised by <a href="http://web.cse.ohio-state.edu/~sun.397/" target="_blank">Prof. Huan Sun</a> and <a href="https://ysu1989.github.io/" target="_blank">Prof. Yu Su</a>. I completed my B.S. in Computer Science at Wuhan University.</p>
+            <p>I received my Ph.D. from The Ohio State University (OSU) where I was advised by <a href="http://web.cse.ohio-state.edu/~sun.397/" target="_blank">Prof. Huan Sun</a> and <a href="https://ysu1989.github.io/" target="_blank">Prof. Yu Su</a>. I completed my B.S. in Computer Science at Wuhan University.</p>
         </div>
 
         <h2>Recent Papers</h2>
         <ul class="talks-list">
-            <li><a href="https://arxiv.org/abs/2311.16502" target="_blank">MMMU</a> / <a href="https://arxiv.org/abs/2409.02813" target="_blank">MMMU-Pro</a> / <a href="https://arxiv.org/abs/2406.01574/" target="_blank">MMLU-Pro</a>: A series of benchmarks for multimodal and language reasoning</li>
+            <li>[1] <a href="https://arxiv.org/abs/2311.16502" target="_blank">MMMU</a> / <a href="https://arxiv.org/abs/2409.02813" target="_blank">MMMU-Pro</a> / <a href="https://arxiv.org/abs/2406.01574/" target="_blank">MMLU-Pro</a>: benchmarks for multimodal and language model reasoning</li>
 
-            <li><a href="https://arxiv.org/abs/2512.07783" target="_blank">On the Interplay of Pre-Training, Mid-Training, and RL on Reasoning Language Models</a></li>
+            <li>[2] <a href="https://arxiv.org/abs/2512.07783" target="_blank">On the Interplay of Pre-Training, Mid-Training, and RL on Reasoning Language Models</a></li>
 
-            <li><a href="https://arxiv.org/pdf/2502.03373" target="_blank">Demystifying Long Chain-of-Thought Reasoning in LLMs</a></li>
+            <li>[3] <a href="https://arxiv.org/pdf/2502.03373" target="_blank">Demystifying Long Chain-of-Thought Reasoning in LLMs</a></li>
 
-            <li><a href="https://arxiv.org/abs/2507.00432" target="_blank">Does Math Reasoning Improve General LLM Capabilities? Understanding Transferability of LLM Reasoning</a></li>
+            <li>[4] <a href="https://arxiv.org/abs/2507.00432" target="_blank">Does Math Reasoning Improve General LLM Capabilities? Understanding Transferability of LLM Reasoning</a></li>
 
-            <li><a href="https://tiger-ai-lab.github.io/MAmmoTH2/" target="_blank">MAmmoTH2: Scaling Instructions from the Web</a></li>
+            <li>[5] <a href="https://tiger-ai-lab.github.io/MAmmoTH2/" target="_blank">MAmmoTH2: Scaling Instructions from the Web</a></li>
 
-            <li><a href="https://arxiv.org/abs/2405.15071" target="_blank">Grokked Transformers are Implicit Reasoners: A Mechanistic Journey to the Edge of Generalization</a></li>
+            <li>[6] <a href="https://arxiv.org/abs/2405.15071" target="_blank">Grokked Transformers are Implicit Reasoners: A Mechanistic Journey to the Edge of Generalization</a></li>
 
         </ul>
 
