--- a/publication.html
+++ b/publication.html
@@ -37,8 +37,7 @@
     <h1>Selected Publications</h1>
     <div class="subtitle">
         Full list:
-        <a href="https://scholar.google.com/citations?hl=en&user=4jX_dI8AAAAJ&view_op=list_works&sortby=pubdate" target="_blank">Google Scholar</a>,
-        <a href="https://www.semanticscholar.org/author/Xiang-Yue/145548079" target="_blank">Semantic Scholar</a>
+        <a href="https://scholar.google.com/citations?hl=en&user=4jX_dI8AAAAJ&view_op=list_works&sortby=pubdate" target="_blank">Google Scholar</a>
     </div>
 
     <p class="note">*: Equal Contributions; ✝: My Advisee</p>
